cdebconf (0.68) UNRELEASED; urgency=low

  * Bastian Blank
    - Use debhelper udeb support.
    - Cleanup build system.

 -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 12:21:03 +0200

cdebconf (0.67) unstable; urgency=low

  * Matt Kraai
    - Free the owner field of the node being deleted (Closes: #256954).
    - Add self to Uploaders.

 -- Matt Kraai <kraai@debian.org>  Wed, 30 Jun 2004 17:37:37 -0700

cdebconf (0.66) unstable; urgency=low

  * Joshua Kwan
    - Apply patch from Guillaume Pernot <gpernot@praksys.org> to fix
      a lone semicolon in newt.c that chokes gcc. (Closes: #251973)
  * Colin Watson
    - Initialize frontend handle to NULL and check for that on dlclose().
      This prevents a segfault when DEBIAN_FRONTEND=none.
    - Add myself to Uploaders.
  * Updated translations:
    - Welsh (cy.po) by Dafydd Harries
    - German (de.po) by Dennis Stampfer
    - Persian (fa.po) by Arash Bijanzadeh
    - Korean (ko.po) by Changwoo Ryu
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Tue, 29 Jun 2004 15:01:36 +0100

cdebconf (0.65) unstable; urgency=low

  * Denis Barbier
    - cdebconf-text-udeb.templates:  when fixing #245624, a string format
      was modified.  Now that string freeze is over, this file is updated
      as well as translations.
    - With text interface, append "[*]" to selected items in boolean, select
      and multiselect questions.
  * Eugeniy Meshcheryakov
    - newt frontend: long lines in select and multiselect templates
      were wrongly truncated.  Closes: #245982

 -- Christian Perrier <bubulle@debian.org>  Sun, 23 May 2004 20:05:51 +0200

cdebconf (0.64) unstable; urgency=low

  * Denis Barbier
    - text frontend: the default value in string templates was printed
      with %d instead of %s.  Closes: #245624

 -- Denis Barbier <barbier@debian.org>  Wed, 28 Apr 2004 02:03:19 +0200

cdebconf (0.63) unstable; urgency=low

  * Updated translations: 