@@ -3,8 +3,10 @@ cdebconf (0.68) UNRELEASED; urgency=low
   * Bastian Blank
     - Use debhelper udeb support.
     - Cleanup build system.
+    - Add X_SAVE command, replaces SIGUSR1.
+    - Return exit code from frontend.
 
- -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 12:21:03 +0200
+ -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 13:43:50 +0200
 
 cdebconf (0.67) unstable; urgency=low
 
